# plugify-plugin-s2sdk

./: .clang-format  .gitmodules  .lldbinit  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  README_ru.md  plugify-plugin-s2sdk.pplugin.in
.github/: release-please-manifest.json
.github/workflows/: cmake-multiple-platform.yml
assets/: gamedata.jsonc  settings.jsonc
debug/lldb/: game_formatter.py  schema_field_formatter.py  schema_field_formatter2.py  vscript_function_formatter.py
schemas/: gamedata.schema.json
src/: pch.hpp  safe.hpp  stl.hpp
src/core/: con_command_manager.cpp  con_command_manager.hpp  con_var_manager.cpp  con_var_manager.hpp  console.cpp  console.hpp  core_config.cpp  core_config.hpp  event_listener.cpp  event_listener.hpp  event_manager.cpp  event_manager.hpp  game_config.cpp  game_config.hpp  globals.cpp  globals.hpp  hook_holder.hpp  hook_mamanger.cpp  hook_manager.hpp  listener_manager.hpp  listeners.cpp  listeners.hpp  logger.cpp  logger.hpp  multi_addon_manager.cpp  multi_addon_manager.hpp  output_manager.cpp  output_manager.hpp  panorama_vote.cpp  panorama_vote.hpp  patch_manager.cpp  patch_manager.hpp  player_manager.cpp  player_manager.hpp  plugin.cpp  plugin.hpp  server_manager.cpp  server_manager.hpp  timer_system.cpp  timer_system.hpp  (+5 more)
src/core/memory/: address.hpp  memaccessor.hpp  memaccessor_linux.cpp  memaccessor_windows.cpp  memaddr.hpp  memprotector.cpp  memprotector.hpp  memprotector_linux.cpp  memprotector_windows.cpp  module.cpp  module.hpp  module_linux.cpp  module_windows.cpp  os.h  protflag.hpp  scan.cpp  scan.hpp
src/core/sdk/: cvars.cpp  cvars.h  cvars.hpp  helpers.hpp  schema.cpp  schema.h  schema.hpp  utils.cpp  utils.h  utils.hpp  utils_print.cpp  virtual.h  virtual.hpp  vscript.cpp  vscript.h  vscript.hpp
src/core/sdk/entity/: cbaseentity.h  cbasegamerules.h  cbasemodelentity.h  cbaseplayercontroller.h  cbaseplayerpawn.h  cbasetrigger.h  ccitadelgamerules.h  ccitadelplayercontroller.h  ccitadelplayerpawn.h  ccollisionproperty.h  ccsgamerules.h  ccsplayercontroller.h  ccsplayerpawn.h  ccsteam.h  ccsweaponbase.h  cenventitymaker.h  cgameplayerequip.h  cgamerules.h  cinbuttonstate.h  clogiccase.h  cparticlesystem.h  cphysthruster.h  cplayercontroller.h  cplayerpawn.h  ctakedamageinfo.h  cteam.h  ctriggerpush.h  ctriggerteleport.h  cvotecontroller.h  debug.h  entityio.h  globaltypes.h  lights.h  math.h  observer.h  services.h  sounds.h  trace.h
src/export/: bodies.cpp  clients.cpp  commands.cpp  console.cpp  cvars.cpp  debug.cpp  engine.cpp  entities.cpp  events.cpp  filesystem.cpp  gameconfig.cpp  gamerules.cpp  keyvalues.cpp  keyvalues3.cpp  listeners.cpp  logger.cpp  math.cpp  models.cpp  modules.cpp  panorama.cpp  schema.cpp  timers.cpp  trace.cpp  transmit.cpp  user_messages.cpp  weapons.cpp
sym/: exported_symbols.lds  version_script.lds
tests/point_script/: sample_plugin.mjs  sample_plugin.pplugin
tests/zombie_mod/: polyhook.d.ts  s2sdk.d.ts  sample_plugin.mjs  sample_plugin.pplugin  zombie_mod.mjs  zombie_mod.pplugin  zombieclasses.json
v8/libs/windows/: v8_libplatform.lib
